VeraSandBox2016/src/objects/Evaluation__c.object
<CustomObject>
    <fields>
        <fullName>AA_Explanation__c</fullName>
        <label>AA - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AF_Comments__c</fullName>
        <label>AF - Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AP_Comments__c</fullName>
        <label>AP - Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AR_Comments__c</fullName>
        <label>AR - Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASVA_Details__c</fullName>
        <inlineHelpText>If yes, details on additional skills</inlineHelpText>
        <label>ASVA - Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ATC_Explanation__c</fullName>
        <label>ATC - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ability_to_Follow_AF__c</fullName>
        <label>Ability to Follow (AF)</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ability_to_Learn_Open_to_Novel_Topics_LT__c</fullName>
        <label>Ability to Learn/Open to New Topics (LT)</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ability_to_Plan_and_Organize_PO__c</fullName>
        <label>Ability to Plan and Organize (PO)</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active_Participation_AP__c</fullName>
        <label>Active Participation (AP)</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_Skills_Value_Added_ASVA__c</fullName>
        <inlineHelpText>Would additional skills have represented a value added</inlineHelpText>
        <label>Additional Skills Value Added (ASVA)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adequate_Team_Composition_ATC__c</fullName>
        <inlineHelpText>Degree to which the composition of the team was adequate for the mission</inlineHelpText>
        <label>Adequate Team Composition (ATC)</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assumes_Responsibility_AR__c</fullName>
        <label>Assumes Responsibility (AR)</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Availability_Comments__c</fullName>
        <label>Availability - Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <inlineHelpText>Availability for new deployment</inlineHelpText>
        <label>Availability</label>
        <picklist>
            <picklistValues>
                <fullName>Immediately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not before 3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not before 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not before 1 year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BPD_Comments__c</fullName>
        <label>BPD - Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BPT_Explanation__c</fullName>
        <label>BPT - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BPU_Explanation__c</fullName>
        <inlineHelpText>Explanation and recommendation on removing or adding information/material, or other adaptations.</inlineHelpText>
        <label>BPU - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Better_Prepared_for_Deployment_BPD__c</fullName>
        <label>Better Prepared for Deployment (BPD)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CC_Comments__c</fullName>
        <label>CC - Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMM_Explanation__c</fullName>
        <inlineHelpText>Explanation and highlight of main contribution</inlineHelpText>
        <label>CMM - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CNP_Explanation__c</fullName>
        <label>CNP - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CNTOR_Explanation__c</fullName>
        <label>CNTOR - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>COMP_COE_Explanation__c</fullName>
        <inlineHelpText>If yes, please explain</inlineHelpText>
        <label>COMP-COE - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>COMP_Cover_Other_Expertise_COMP_COE__c</fullName>
        <label>COMP- Cover Other Expertise (COMP-COE)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>COMP_Explanation__c</fullName>
        <inlineHelpText>Explanation and highlight of the challenges experienced in the mentoring aspects of the mission</inlineHelpText>
        <label>COMP - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>COMP_FM_Explanation__c</fullName>
        <inlineHelpText>If yes, which subject and with which modalities</inlineHelpText>
        <label>COMP-FM - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>COMP_Follow_up_Mentoring_COMP_FM__c</fullName>
        <inlineHelpText>Recommended follow-up mentoring</inlineHelpText>
        <label>COMP - Follow-up Mentoring (COMP-FM)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>COMP_MR_Explanation__c</fullName>
        <label>COMP-MR - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>COMP_Main_Mission_Results__c</fullName>
        <label>COMP - Main Mission Results</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>COMP_Mentoring_Local_Counterparts_COMP__c</fullName>
        <inlineHelpText>Impact in terms of mentoring local counterparts</inlineHelpText>
        <label>COMP Mentoring Local Counterparts (COMP)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>COMP_Mentoring_Relevance_COMP_MR__c</fullName>
        <inlineHelpText>Relevance of the mentoring provided to the mentees</inlineHelpText>
        <label>COMP-Mentoring Relevance (COMP-MR)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>COMP_SA_Explanation__c</fullName>
        <inlineHelpText>If yes, please explain how / If no, please explain why</inlineHelpText>
        <label>COMP-SA - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>COMP_Strengthened_Ability_COMP_SA__c</fullName>
        <inlineHelpText>Strengthened ability to investigate and prosecute itself</inlineHelpText>
        <label>COMP - Strengthened Ability (COMP-SA)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CPS_Explanation__c</fullName>
        <label>CPS - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRS_Explanation__c</fullName>
        <label>CRS - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CVIC_Explanation__c</fullName>
        <inlineHelpText>Explanation and, if applicable, explanation of the extent to which Expert contributed to enhancing accountability for crimes committed against children</inlineHelpText>
        <label>CVIC Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CVIC_Perspective__c</fullName>
        <inlineHelpText>Extent to which a children-sensitive approach was integrated in the performance of the duties</inlineHelpText>
        <label>CVIC Perspective</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Candidates_Proposal_Speed_CPS__c</fullName>
        <inlineHelpText>Speed at which candidates were proposed</inlineHelpText>
        <label>Candidates Proposal Speed (CPS)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Candidates_Release_Speed_CRS__c</fullName>
        <inlineHelpText>Speed at which candidates were made available after final selection</inlineHelpText>
        <label>Candidates Release Speed (CRS)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Capacity_Building_Details__c</fullName>
        <label>Capacity Building - Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Capacity_Building_Opportunities__c</fullName>
        <inlineHelpText>Opportunities for knowldege sharing or mentoring (whether capacity building was part of TORs or not)</inlineHelpText>
        <label>Capacity Building Opportunities</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Capacity_Building_part_of_TORs__c</fullName>
        <label>Capacity Building part of TORs</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Certification_Recommended__c</fullName>
        <label>Certification Recommended</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_Needed_to_TORs__c</fullName>
        <inlineHelpText>Should TORs be changed</inlineHelpText>
        <label>Change Needed to TORs</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Evaluations</relationshipLabel>
        <relationshipName>Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Negotiation_Process_CNP__c</fullName>
        <inlineHelpText>Rating of the process of negotiating the terms of the contract</inlineHelpText>
        <label>Contract Negotiation Process (CNP)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contribution_Made_to_Mission_CMM__c</fullName>
        <inlineHelpText>Level of the contribution made to the investigation/mission</inlineHelpText>
        <label>Contribution Made to Mission (CMM)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Course_Content_CC__c</fullName>
        <label>Course Content (CC)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DBTOR_Explanation__c</fullName>
        <label>DBTOR - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DC_Explanation__c</fullName>
        <inlineHelpText>Explanation and recommendation on removing or adding information</inlineHelpText>
        <label>DC - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DEBQU_Explanation__c</fullName>
        <label>DEBQU - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DEINR_Explanation__c</fullName>
        <label>DEINR - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DE_Briefing_Quality_Usefulness_DEBQ__c</fullName>
        <inlineHelpText>Rating of the quality and usefulness of the breifing received from deployment entity</inlineHelpText>
        <label>DE Briefing Quality, Usefulness (DEBQ)</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DE_Briefing_Received__c</fullName>
        <inlineHelpText>Did the Expert receive a briefing from the deployment entity</inlineHelpText>
        <label>DE Briefing Received</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DE_Information_Needed_Received_DEINR__c</fullName>
        <inlineHelpText>Did the Expert receive the information needed from the deployment entity (Expenses, salary, reporting requirements, etc)</inlineHelpText>
        <label>DE Information Needed Received (DEINR)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DL_Comments__c</fullName>
        <label>DL - Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Demonstrated_Interest_Engagement_IE__c</fullName>
        <label>Demonstrated Interest/Engagement (IE)</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Demonstrated_Knowledge_Expertise_KE__c</fullName>
        <label>Demonstrated Knowledge/Expertise (KE)</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deployment_Checklist_DC__c</fullName>
        <inlineHelpText>Rating of the deployment checklist</inlineHelpText>
        <label>Deployment Checklist (DC)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment</label>
        <referenceTo>Deployment__c</referenceTo>
        <relationshipLabel>Evaluations</relationshipLabel>
        <relationshipName>Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Directive_Leadership_DL__c</fullName>
        <label>Directive Leadership (DL)</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Duties_Beyond_TORs_DBTOR__c</fullName>
        <inlineHelpText>Was the Expert asked or did the Expert perform duties beyond what was specified in the TORs</inlineHelpText>
        <label>Duties Beyond TORs (DBTOR)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EMN_Explanation__c</fullName>
        <label>EMN - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EXPRP_Explanation__c</fullName>
        <label>EXPRP - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EXP_CVIC_Explanation__c</fullName>
        <inlineHelpText>Explanation and, if applicable, how the expert contributed to enhance CVIC accountability</inlineHelpText>
        <label>EXP-CVIC - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EXP_FSC_Explanation__c</fullName>
        <label>EXP-FSC - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EXP_MRD_Explanation__c</fullName>
        <label>EXP-MRD - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EXP_Perf_Explanation__c</fullName>
        <label>EXP-Perf - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EXP_SGBV_Explanation__c</fullName>
        <inlineHelpText>Explanation and, if applicable, how the expert contributed to enhance SGBV accountability</inlineHelpText>
        <label>EXP-SGBV - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EXP_TI_Explanation__c</fullName>
        <label>EXP-TI - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EXP_UA_Explanation__c</fullName>
        <inlineHelpText>If yes, for which kind of position/missions? If no, please explain why.</inlineHelpText>
        <label>EXP-UA - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Evaluation_Result__c</fullName>
        <formula>(VALUE(TEXT( Module_Content__c ))+VALUE(TEXT( Module_Presentation__c ))+VALUE(TEXT( Module_Usefulness__c )))/3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Evaluation Result</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Evaluator_Name__c</fullName>
        <label>Evaluator Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exp_Familiarity_Sensitivity_EXP_FSC__c</fullName>
        <inlineHelpText>Familiarity and sensitivity with local culture and context</inlineHelpText>
        <label>Exp. Familiarity, Sensitivity (EXP-FSC)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expert_Integrated_CVIC_EXP_CVIC__c</fullName>
        <inlineHelpText>CVIC approach integrated in the performance of the duties</inlineHelpText>
        <label>Expert Integrated CVIC (EXP-CVIC)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expert_Integrated_SGBV_EXP_SGBV__c</fullName>
        <inlineHelpText>SGBV perspective integrated in the performance of the duties</inlineHelpText>
        <label>Expert Integrated SGBV (EXP-SGBV)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expert_Matched_Needs_EMN__c</fullName>
        <inlineHelpText>Degree to which candidates matched the needs outlined for the deployment</inlineHelpText>
        <label>Expert Matched Needs (EMN)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expert_Matched_Role_and_Duties_EXP_MRD__c</fullName>
        <label>Expert Matched Role and Duties (EXP-MRD)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expert_Performance_EXP_Perf__c</fullName>
        <inlineHelpText>Performance in carrying out the assigned tasks</inlineHelpText>
        <label>Expert Performance (EXP-Perf)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>